# click-llm

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  click_llm.pth  pyproject.toml  setup.py
.github/workflows/: pre-commit.yml  publish.yml
src/: sitecustomize.py
src/click_llm/: __init__.py  catalog.py  inject.py
tests/: test_auto_injection_functional.py
